--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -4,6 +4,7 @@
   with_items:
    - mysql-server
    - php5-mysql
+   - python-mysqldb
 
 - name: Create Mysql configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
