--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -3,5 +3,5 @@
   apt: name=nginx state=present
 
 - name: Copy nginx configuration for wordpress
-  template: src=default.conf dest=/etc/nginx/conf.d/default.conf
+  template: src=default.conf dest=/etc/nginx/sites-available/default
   notify: restart nginx
