--- a/roles/php-fpm/tasks/main.yml
+++ b/roles/php-fpm/tasks/main.yml
@@ -6,6 +6,6 @@
   command: mv /etc/php5/fpm/pool.d/www.conf /etc/php5/fpm/pool.d/www.disabled creates=/etc/php5/fpm/pool.d/www.disabled
   notify: restart php5-fpm
  
-- name: Copy php-fpm configuration
+- name: Copy php5-fpm configuration
   template: src=wordpress.conf dest=/etc/php5/fpm/pool.d/wordpress.conf
   notify: restart php5-fpm
