--- a/roles/php-fpm/templates/wordpress.conf
+++ b/roles/php-fpm/templates/wordpress.conf
@@ -1,10 +1,10 @@
 [wordpress]
-listen = /var/run/php-fpm/wordpress.sock
-listen.owner = nginx
-listen.group = nginx
+listen = /var/run/php5-fpm.sock
+listen.owner = www-data
+listen.group = www-data
 listen.mode = 0660
-user = wordpress
-group = wordpress
+user = www-data
+group = www-data
 pm = dynamic
 pm.max_children = 10
 pm.start_servers = 1
