--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -6,12 +6,6 @@
 - name: Extract archive
   command: chdir=/srv/ /bin/tar xvf wordpress-{{ wp_version }}.tar.gz creates=/srv/wordpress
 
-- name: Add group "wordpress"
-  group: name=wordpress
-
-- name: Add user "wordpress"
-  user: name=wordpress group=wordpress home=/srv/wordpress/
-
 - name: Fetch random salts for WordPress config
   local_action: command curl https://api.wordpress.org/secret-key/1.1/salt/
   register: "wp_salt"
@@ -27,7 +21,7 @@
   template: src=wp-config.php dest=/srv/wordpress/
 
 - name: Change ownership of WordPress installation
-  file: path=/srv/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes
+  file: path=/srv/wordpress/ owner=www-data group=www-data state=directory recurse=yes
 
-- name: Start php-fpm Service
-  service: name=php-fpm state=started enabled=yes
+- name: Start php5-fpm Service
+  service: name=php5-fpm state=started enabled=yes
